--- a/org.talend.repository.hbaseprovider/plugin.xml
+++ b/org.talend.repository.hbaseprovider/plugin.xml
@@ -55,6 +55,10 @@
             libraries="netty-3.5.5.Final.jar;hbase-client-0.96.0.2.0.6.0-76-hadoop2.jar;hbase-common-0.96.0.2.0.6.0-76-hadoop2.jar;hbase-protocol-0.96.0.2.0.6.0-76-hadoop2.jar;zookeeper-3.4.5.jar;hadoop-common-2.2.0.2.0.6.0-76.jar;hadoop-auth-2.2.0.2.0.6.0-76.jar;htrace-core-2.01.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-codec-1.4.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
       <classloader
+            index="HBASE:HORTONWORKS:HDP_2_1"
+            libraries="hadoop-auth-2.4.0.2.1.1.0-385.jar;hadoop-common-2.4.0.2.1.1.0-385.jar;hbase-client-0.98.0.2.1.1.0-385-hadoop2.jar;hbase-common-0.98.0.2.1.1.0-385-hadoop2.jar;hbase-protocol-0.98.0.2.1.1.0-385-hadoop2.jar;zookeeper-3.4.5.2.1.1.0-385.jar;htrace-core-2.04.jar;commons-lang-2.6.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-codec-1.7.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;netty-3.5.5.Final.jar;">
+      </classloader>
+      <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH3"
             libraries="commons-lang3-3.0.jar;commons-logging-1.1.1.jar;hadoop-core-0.20.203.0.jar;hbase-0.90.1-cdh3u0.jar;log4j-1.2.16.jar;zookeeper-3.3.3-cdh3u0.jar">
       </classloader>
