--- a/org.talend.designer.components.bigdata/components/tHCatalogLoad/tHCatalogLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogLoad/tHCatalogLoad_messages.properties
@@ -8,6 +8,7 @@ VERSION.NAME=Version
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 
 HCAT_VERSION.NAME=HCatalog version
@@ -17,6 +18,7 @@ HCAT_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 HCAT_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 HCAT_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
 HCAT_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
+HCAT_VERSION.ITEM.MAPR310=MapR 3.1.0
 
 TEMPLETON_CONFIGURATION.NAME=Templeton Configuration
 TEMPLETON_HOST.NAME=Templeton hostname
