--- a/org.talend.designer.components.bigdata/components/tAzureStorageContainerCreate/tAzureStorageContainerCreate_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tAzureStorageContainerCreate/tAzureStorageContainerCreate_messages.properties
@@ -1,5 +1,5 @@
-ACCESS_KEY.NAME=Application name
-SECRET_KEY.NAME=Secret Key
+ACCESS_KEY.NAME=Account Name
+SECRET_KEY.NAME=Account Key
 PROTOCOL.NAME=Protocol
 PROTOCOL.ITEM.HTTP=HTTP
 PROTOCOL.ITEM.HTTPS=HTTPS
@@ -7,9 +7,10 @@ CONTAINER_ACL.ITEM.PUBLIC_CONTAINER=Public container
 CONTAINER_ACL.ITEM.PRIVATE=Private
 CONTAINER_ACL.NAME=Access Control
 CONTAINER.NAME=Container name
-CONNECTION.NAME=Component List
+CONNECTION.NAME=Connection
 CONNECTION_CONFIG.NAME=Connection
 DIE_ON_ERROR.NAME=Die on error
-HELP=org.talend.help.tGSBucketCreate
+HELP=org.talend.help.tAzureStorageContainerCreate
 LONG_NAME=Creates a container in Microsoft Azure Storage
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
+DIE_ON_ERROR.NAME=Die on error
