--- a/org.talend.designer.components.bigdata/components/tAzureStorageContainerDelete/tAzureStorageContainerDelete_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tAzureStorageContainerDelete/tAzureStorageContainerDelete_messages.properties
@@ -1,10 +1,10 @@
 ACCESS_KEY.NAME=Account name
-SECRET_KEY.NAME=Secret Key
+SECRET_KEY.NAME=Account Key
 PROTOCOL.NAME=Protocol
 PROTOCOL.ITEM.HTTP=HTTP
 PROTOCOL.ITEM.HTTPS=HTTPS
 CONTAINER.NAME=Container name
-CONNECTION.NAME=Component List
+CONNECTION.NAME=Connection
 CONNECTION_CONFIG.NAME=Connection
 DIE_ON_ERROR.NAME=Die on error
 HELP=org.talend.help.tAzureStorageContainerDelete
