--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -37,7 +37,7 @@ DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 
 HIVE_VERSION.NAME=Hive version
-HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
 HIVE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 HIVE_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 HIVE_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
@@ -52,9 +52,9 @@ HIVE_VERSION.ITEM.MAPR212=MapR 2.1.2
 HIVE_VERSION.ITEM.MAPR213=MapR 2.1.3
 HIVE_VERSION.ITEM.MAPR301=MapR 3.0.1
 HIVE_VERSION.ITEM.MAPR310=MapR 3.1.0
-HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
-HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0
-HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8
+HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
+HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0 (Deprecated)
+HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
 
 HIVE_SERVER.NAME=Hive Server
