--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -19,14 +19,14 @@ DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 
 PIG_VERSION.NAME=Version
-PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
 PIG_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 PIG_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 PIG_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
 PIG_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
 PIG_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2 (Pig 0.9.1)
-PIG_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
-PIG_VERSION.ITEM.MAPR1=MapR 1.2.0
+PIG_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
+PIG_VERSION.ITEM.MAPR1=MapR 1.2.0 (Deprecated)
 PIG_VERSION.ITEM.MAPR2=MapR 2.0.0
 PIG_VERSION.ITEM.MAPR212=MapR 2.1.2
 PIG_VERSION.ITEM.MAPR213=MapR 2.1.3
@@ -36,7 +36,7 @@ PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
 PIG_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 PIG_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 PIG_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
-PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8
+PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 PIG_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Pig 0.9.2)
 PIG_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 PIG_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
