--- a/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -7,13 +7,18 @@ VERSION.NAME=Version
 
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 
 HCAT_VERSION.NAME=HCatalog version
-HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
 HCAT_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 HCAT_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 HCAT_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
+HCAT_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
+HCAT_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
+HCAT_VERSION.ITEM.MAPR310=MapR 3.1.0
 
 HDFS_CONFIGURATION.NAME=HDFS Configuration
 
