--- a/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
@@ -20,21 +20,24 @@ AUTHENTICATION_MODE.ITEM.UGI=Usergroup
 
 DB_VERSION.NAME=Hadoop version
 DB_VERSION.ITEM.APACHE_0_20_204=Apache 0.20.204
-DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
+DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
 DB_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
-DB_VERSION.ITEM.MAPR1=MapR 1.2.0
+DB_VERSION.ITEM.MAPR1=MapR 1.2.0 (Deprecated)
 DB_VERSION.ITEM.MAPR2=MapR 2.0.0
 DB_VERSION.ITEM.MAPR212=MapR 2.1.2
 DB_VERSION.ITEM.MAPR213=MapR 2.1.3
 DB_VERSION.ITEM.MAPR301=MapR 3.0.1
+DB_VERSION.ITEM.MAPR310=MapR 3.1.0
 DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
-DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 DB_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
+DB_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 DB_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
-DB_VERSION.ITEM.MapR_EMR=MapR 1.2.8
+DB_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
+DB_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
 
 FS_DEFAULT_NAME.NAME=NameNode URI
@@ -74,3 +77,4 @@ INCLUDSUBDIR.NAME=Includes subdirectories
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
