--- a/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -27,21 +27,24 @@ DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 
 HIVE_VERSION.NAME=Hive version
-HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
 HIVE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 HIVE_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 HIVE_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
+HIVE_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
 HIVE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (Hive 0.7.1)
 HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Hive 0.9.0)
 HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 HIVE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
+HIVE_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 HIVE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HIVE_VERSION.ITEM.MAPR212=MapR 2.1.2
 HIVE_VERSION.ITEM.MAPR213=MapR 2.1.3
 HIVE_VERSION.ITEM.MAPR301=MapR 3.0.1
-HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
-HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0
-HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8
+HIVE_VERSION.ITEM.MAPR310=MapR 3.1.0
+HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
+HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0 (Deprecated)
+HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
 
 HIVE_SERVER.NAME=Hive Server
@@ -136,6 +139,7 @@ DIE_ON_ERROR.NAME=Die on error
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 HIVE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+HIVE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 USE_YARN.NAME=Use Yarn
 SET_RESOURCE_MANAGER.NAME=Set Resource Manager
 RESOURCE_MANAGER.NAME=
