--- a/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -99,18 +99,21 @@ DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 
 DB_VERSION.NAME=Hadoop version
-DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
-DB_VERSION.ITEM.MAPR1=MapR 1.2.0 (Sqoop 1.3)
+DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
+DB_VERSION.ITEM.MAPR1=MapR 1.2.0 (Sqoop 1.3) (Deprecated)
 DB_VERSION.ITEM.MAPR2=MapR 2.0.0 (Sqoop 1.4)
 DB_VERSION.ITEM.MAPR212=MapR 2.1.2 (Sqoop 1.4.2)
 DB_VERSION.ITEM.MAPR213=MapR 2.1.3 (Sqoop 1.4.2)
 DB_VERSION.ITEM.MAPR301=MapR 3.0.1 (Sqoop 1.4.2)
-DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+DB_VERSION.ITEM.MAPR310=MapR 3.1.0 (Sqoop 1.4.2)
+DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 DB_VERSION.ITEM.HDP_2_0=Hortonworks Data Platform V2.0.0(BigWheel)
+DB_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 DB_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
+DB_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
@@ -131,6 +134,7 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 USE_YARN.NAME=Use Yarn
 RESOURCE_MANAGER.NAME=Resource Manager
 CLASSPATH_SEPARATOR.NAME=Path separator in server
