--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
@@ -32,6 +32,14 @@
             name="appName"
             value="%productName">
       </property>
+      <property
+            name="cssTheme"
+            value="org.talend.themes.talend_theme.default">
+      </property>
+      <property
+            name="applicationCSSResources"
+            value="platform:/plugin/org.talend.themes.talend_theme/themes/">
+      </property>
    </product>
 </extension>
    <extension
