--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -96,3 +96,11 @@ END_ROW.NAME=End Row
 HADOOP_CUSTOM_VERSION.NAME=Hadoop version of the distribution
 HADOOP_CUSTOM_VERSION.ITEM.HADOOP_1=Hadoop 1
 HADOOP_CUSTOM_VERSION.ITEM.HADOOP_2=Hadoop 2
+
+USE_KRB.NAME=Use kerberos authentication
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
+HBASE_MASTER_PRINCIPAL.NAME=Hbase Master principal
+HBASE_REGIONSERVER_PRINCIPAL.NAME=Hbase Region Server principal
