--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -198,3 +198,10 @@ REMOTE_FOLDER.NAME=Deployment Blob
 HDINSIGHT_CONF.NAME=HD Insight configuration
 HDINSIGHT_USERNAME.NAME=Username
 HDINSIGHT_PASSWORD.NAME=Password
+
+TEZ_LIB.NAME=Tez lib
+TEZ_LIB.ITEM.INSTALL=Auto install
+TEZ_LIB.ITEM.USE_EXIST=Use exist
+TEZ_LIB_FOLDER.NAME=Install folder in HDFS
+TEZ_LIB_NAME.NAME=Lib file
+TEZ_LIB_PATH.NAME=Lib path(folder or file)
