--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -38,7 +38,7 @@ HIVE_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
 HIVE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (Hive 0.7.1)
 HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Hive 0.9.0)
 HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
-HIVE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
+HIVE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3(YARN mode)
 HIVE_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 HIVE_VERSION.ITEM.Cloudera_CDH5_1_MR1=Cloudera CDH5.1(MR 1 mode)
 HIVE_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
@@ -168,3 +168,8 @@ REMOTE_FOLDER.NAME=Deployment Blob
 HDINSIGHT_CONF.NAME=HD Insight configuration
 HDINSIGHT_USERNAME.NAME=Username
 HDINSIGHT_PASSWORD.NAME=Password
+
+GROUP.NAME=Group
+EXECUTION_ENGINE.NAME=Execution engine
+EXECUTION_ENGINE.ITEM.MR=MapReduce
+EXECUTION_ENGINE.ITEM.TEZ=Tez
