--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -203,5 +203,6 @@ TEZ_LIB.NAME=Tez lib
 TEZ_LIB.ITEM.INSTALL=Auto install
 TEZ_LIB.ITEM.USE_EXIST=Use exist
 TEZ_LIB_FOLDER.NAME=Install folder in HDFS
-TEZ_LIB_NAME.NAME=Lib file
+TEZ_LIB_NAME.NAME=Lib jars
+TEZ_LIB_NAME.ITEM.JAR_NAME=Jar name
 TEZ_LIB_PATH.NAME=Lib path(folder or file)
