--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -326,6 +326,34 @@
             name="kafka-clients-0.9.0.2.4.0.0-169.jar"
             mvn_uri="mvn:org.talend.libraries/kafka-clients-0.9.0.2.4.0.0-169/6.1.0">
         </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="spark-streaming-flume-assembly-HDP_2_4"
+            name="spark-streaming-flume-assembly_2.10-1.6.0.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-streaming-flume-assembly_2.10-1.6.0/6.1.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="flume-ng-sdk-HDP_2_4"
+            name="flume-ng-sdk-1.5.2.2.4.0.0-169.jar"
+            mvn_uri="mvn:org.talend.libraries/flume-ng-sdk-1.5.2.2.4.0.0-169/6.1.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="flume-ng-core-HDP_2_4"
+            name="flume-ng-core-1.5.2.2.4.0.0-169.jar"
+            mvn_uri="mvn:org.talend.libraries/flume-ng-core-1.5.2.2.4.0.0-169/6.1.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="avro-ipc-HDP_2_4"
+            name="avro-ipc-1.7.3.jar"
+            mvn_uri="mvn:org.talend.libraries/avro-ipc-1.7.3/6.1.0">
+        </libraryNeeded>
                                    
         <!-- Groups -->
         
@@ -862,7 +890,18 @@
             <library id="aws-java-sdk-dynamodb-1.9.16.jar"/>            
             <library id="aws-java-sdk-cloudwatch-1.9.16.jar"/>            
             <library id="joda-time-2.7.jar"/>            
-        </libraryNeededGroup>        
+        </libraryNeededGroup>   
+        
+        <!-- Spark Flume group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark Flume libraries for HDP 2.4 that are MRREQUIRED"
+                id="SPARK-FLUME-LIB-MRREQUIRED-HDP_2_4"
+                name="SPARK-FLUME-LIB-MRREQUIRED-HDP_2_4">
+            <library id="spark-streaming-flume-assembly-HDP_2_4"/>
+            <library id="flume-ng-sdk-HDP_2_4"/>
+            <library id="flume-ng-core-HDP_2_4"/>            
+            <library id="avro-ipc-HDP_2_4"/>            
+        </libraryNeededGroup>     
     </extension>
     <extension
           point="org.talend.core.runtime.classloader_provider">
