--- a/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
@@ -572,7 +572,7 @@
                 description="Spark Kafka assembly libraries for MapR 5.1.0 that are MRREQUIRED"
                 id="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-MAPR510"
                 name="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-MAPR510">
-            <library id="spark-streaming-kinesis-asl-assembly_2.10-1.5.2.jar"/>
+            <library id="spark-streaming-kafka_2.10-1.5.2.jar"/>
             <library id="kafka_2.10-0.8.2.1.jar"/>
             <library id="metrics-core-2.2.0.jar"/>
         </libraryNeededGroup>
