--- a/main/components_lib/talend-cloudera-navigator-api/src/test/resources/log4j.properties
+++ b/main/components_lib/talend-cloudera-navigator-api/src/test/resources/log4j.properties
@@ -16,7 +16,7 @@
 #
 
 # Set everything to be logged to the console
-log4j.rootCategory=INFO, console
+log4j.rootCategory=DEBUG, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Threshold=DEBUG
