--- a/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
@@ -178,9 +178,9 @@
             
        <libraryNeeded
             context="plugin:org.talend.libraries.hadoop.mapr.5.1.0"
-            id="pig-core-h2.jar"
-            name="pig-core-h2.jar"
-            mvn_uri="mvn:org.talend.libraries/pig-core-h2/6.2.0">
+            id="pig-core-h2-mapr51.jar"
+            name="pig-core-h2-mapr51.jar"
+            mvn_uri="mvn:org.talend.libraries/pig-core-h2-mapr51/6.2.0">
         </libraryNeeded>
 
         <libraryNeeded
@@ -450,7 +450,7 @@
             <library id="hive-exec-1.2.0-mapr.jar"/>
             <library id="hive-metastore-1.2.0-mapr.jar"/>
             <library id="flexjson-2.1.jar"/>
-            <library id="pig-core-h2.jar"/>
+            <library id="pig-core-h2-mapr51.jar"/>
             <library id="automaton-1.11-8.jar"/>
         </libraryNeededGroup>
         
