--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -876,6 +876,10 @@
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5_7?USE_KRB"
             libraries="hadoop-common-2.6.0-cdh5.7.0.jar;hadoop-hdfs-2.6.0-cdh5.7.0.jar;hadoop-auth-2.6.0-cdh5.7.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;avro-1.7.6-cdh5.7.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-conf-kerberos.jar">
+      </classloader>
+      <classloader
+            index="IMPALA:CLOUDERA:Cloudera_CDH5_7"
+            libraries=";">
       </classloader>      
     </extension>
 </plugin>
