--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -832,9 +832,9 @@
                 description="Talend cloudera navigator API."
                 id="TALEND_CLOUDERA_CDH_5_5_NAVIGATOR"
                 name="TALEND_CLOUDERA_CDH_5_5_NAVIGATOR"  >
-             <library id="talend-cloudera-navigator-api-6.1.0-SNAPSHOT-20151127" />
-             <library id="navigator-sdk-client-1.0-BETA20151126" />
-             <library id="navigator-sdk-model-1.0-BETA20151126" />
+             <library id="talend-cloudera-navigator-api-6.1.0-SNAPSHOT-20160613" />
+             <library id="navigator-sdk-client-1.0" />
+             <library id="navigator-sdk-model-1.0" />
              <library id="spring-core-4.0.7.RELEASE"/>
              <library id="spring-web-4.0.7.RELEASE"/>
              <library id="jackson-databind-2.2.3.jar"/>
