--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages.properties
@@ -12,9 +12,11 @@ READ_ONLY_MODE.NAME=Read only
 CONNECTION_GROUP.NAME=Connection
 
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
-DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X
-DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X
+DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X (Deprecated)
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X (Deprecated)
+DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X (Deprecated)
+DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X
+DB_VERSION.ITEM.NEO4J_3_0_X=Neo4J 3.0.X
 
 SET_USERNAME.NAME=set username
 USERNAME.NAME=Username
