--- a/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
@@ -1094,6 +1094,7 @@
 			 <library id="jersey-client-2.22.2.jar"/>
 		
 			 <library id="jersey-common-2.22.2.jar"/>
+			 <library id="jersey-core-1.9.jar"/>
 			 <library id="jersey-container-servlet-2.22.2.jar"/>
 			 <library id="jersey-container-servlet-core-2.22.2.jar"/>
 			 <library id="jersey-guava-2.22.2.jar"/>
