--- a/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
@@ -276,9 +276,16 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdp250"
-            id="spark-streaming-kinesis-asl-assembly-HDP_2_5"
-            name="spark-streaming-kinesis-asl-assembly_2.10-1.6.2.jar" 
-            mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl-assembly_2.10-1.6.2/6.3.0">
+            id="spark-streaming-kinesis-asl-HDP_2_5"
+            name="spark-streaming-kinesis-asl_2.10-1.6.2.jar" 
+            mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl_2.10-1.6.2/6.0.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+        	context="plugin:org.talend.hadoop.distribution.hdp250"
+        	id="amazon-kinesis-client-1.4.0.jar"
+            name="amazon-kinesis-client-1.4.0.jar"
+            mvn_uri="mvn:org.talend.libraries/amazon-kinesis-client-1.4.0/6.0.0">
         </libraryNeeded>
         
         <!-- GraphFrames libraries -->
@@ -1062,8 +1069,8 @@
                 description="Spark Kinesis libraries for HDP 2.5 that are MRREQUIRED"
                 id="SPARK-KINESIS-LIB-MRREQUIRED-HDP_2_5"
                 name="SPARK-KINESIS-LIB-MRREQUIRED-HDP_2_5">
-            <library id="spark-streaming-kinesis-asl-assembly-HDP_2_5"/>
-            <library id="amazon-kinesis-client-1.6.3.jar"/><!--AMAZON license-->
+            <library id="spark-streaming-kinesis-asl-HDP_2_5"/>
+            <library id="amazon-kinesis-client-1.4.0.jar"/><!--AMAZON license-->
             <library id="aws-java-sdk-kinesis-1.10.6.jar"/>
             <library id="aws-java-sdk-core-1.10.6.jar"/>            
             <library id="aws-java-sdk-dynamodb-1.10.6.jar"/>            
